--- a/auth_api/node/Dockerfile
+++ b/auth_api/node/Dockerfile
@@ -1,4 +1,13 @@
 FROM node:9-alpine
 
-# App must run on port 8000
-# Add your instructions to dockerize the application
+WORKDIR /src/
+
+COPY package*.json ./
+
+RUN npm install
+
+COPY . .
+
+EXPOSE 8000
+
+CMD [ "npm", "run", "start" ]
