--- a/auth_api/node/package.json
+++ b/auth_api/node/package.json
@@ -19,10 +19,16 @@
   },
   "homepage": "https://github.com/wizeline/wize-devops#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "config": "^1.30.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "hashlib": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "npm": ">=6.14.6",
+    "require": "^2.4.20",
     "restify": "^7.1.1"
   },
   "devDependencies": {
@@ -30,7 +36,7 @@
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "nodemon": "^1.17.3",
+    "nodemon": "^1.19.4",
     "supertest": "^3.0.0"
   }
 }
